fixed database